# anomalyze

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
agent/: play.py  prompts.py  run.py  schemas.py
agent/tools/: __init__.py  fetch_ticket_samples.py  fetch_ticket_stats.py
dataset/: __init__.py  explore.py  prepare.py  prepare_dataset.py  preprocess.py  tests.py  visualize.py
dataset/data/: anomaly_metadata.json  tests.py
dataset/dataset/data/: anomaly_metadata.json
ml/: __init__.py  features.py  run.py  utils.py
ml/data/: test.csv  train.csv
ml/models/: __init__.py  arima.py  lgbm.py  prophet.py
tests/: test_dataset.py
