[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anomalyze*"]

[project]
name = "anomalyze"
version = "0.1.1"
description = "Anomaly + Analyze"
authors = [{ name = "Abdullah Meda", email = "abdullah.meda@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "datasets",
    "pandas",
    "numpy",
    "matplotlib",
    "prophet",
    "statsmodels",
    "google-adk",
    "litellm",
    "pydantic",
    "arize-phoenix-otel",
    "openinference-instrumentation-google-adk",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/abdullahmeda/anomalyze"
"Bug Tracker" = "https://github.com/abdullahmeda/anomalyze/issues"